# ASI-Analiza-wypadkow

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml  ct.yml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
docs/: architecture.py  data_dictionary.md  make_pptx.py  prezentacja.html  prezentacja.pptx
models/: README.md
notebooks/: 01_baseline_model.ipynb  02_model_comparison.ipynb
scripts/: demo.py  validate_model.py
src/crash_kedro/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/crash_kedro/api/: app.py
src/crash_kedro/monitoring/: drift_detector.py
src/crash_kedro/pipelines/autogluon/: __init__.py  nodes.py  pipeline.py
src/crash_kedro/pipelines/automl/: __init__.py  nodes.py  pipeline.py
src/crash_kedro/pipelines/data_modeling/: __init__.py  nodes.py  pipeline.py
src/crash_kedro/pipelines/data_preparation/: __init__.py  nodes.py  pipeline.py
src/crash_kedro/pipelines/feature_selection/: __init__.py  nodes.py  pipeline.py
src/crash_kedro/pipelines/hyperparameter_tuning/: __init__.py  nodes.py  pipeline.py
tests/: test_run.py
